fixed a bug where content was visible 'under' component in mobile

--- a/elements/pfe-jump-links/src/pfe-jump-links-nav.scss
+++ b/elements/pfe-jump-links/src/pfe-jump-links-nav.scss
@@ -120,8 +120,9 @@ a {
       background-color: white;
     }
   }
-  
-  border: 1px solid transparent;
+  @media(min-width: 992px) {
+    border: 1px solid transparent;
+  }
   ::slotted([slot="heading"]) {
     color: #{pfe-color(surface--darkest)};
   } 
